add matplotlib to dev requirements

--- a/requirements/requirements-dev.in
+++ b/requirements/requirements-dev.in
@@ -6,11 +6,9 @@ pytest
 pytest-cov
 jupyter
 plotly
+matplotlib
 
 # Linting & formatting
 black
 flake8
 pre-commit
-
-# Dependency management
-pip-tools
