--- a/requirements/requirements-dev.txt
+++ b/requirements/requirements-dev.txt
@@ -55,8 +55,12 @@ comm==0.2.2
     # via
     #   ipykernel
     #   ipywidgets
+contourpy==1.3.1
+    # via matplotlib
 coverage[toml]==7.7.1
     # via pytest-cov
+cycler==0.12.1
+    # via matplotlib
 debugpy==1.8.13
     # via ipykernel
 decorator==5.2.1
@@ -73,6 +77,8 @@ filelock==3.18.0
     # via virtualenv
 flake8==7.1.2
     # via -r requirements/requirements-dev.in
+fonttools==4.57.0
+    # via matplotlib
 fqdn==1.5.1
     # via jsonschema
 future==1.0.0
@@ -177,10 +183,14 @@ jupyterlab-server==2.27.3
     #   notebook
 jupyterlab-widgets==3.0.13
     # via ipywidgets
+kiwisolver==1.4.8
+    # via matplotlib
 markupsafe==3.0.2
     # via
     #   jinja2
     #   nbconvert
+matplotlib==3.10.1
+    # via -r requirements/requirements-dev.in
 matplotlib-inline==0.1.7
     # via
     #   ipykernel
@@ -219,7 +229,9 @@ notebook-shim==0.2.4
 numpy==2.2.4
     # via
     #   -r requirements/requirements.in
+    #   contourpy
     #   hyperopt
+    #   matplotlib
     #   pandas
     #   patsy
     #   scikit-learn
@@ -237,6 +249,7 @@ packaging==24.2
     #   jupyter-server
     #   jupyterlab
     #   jupyterlab-server
+    #   matplotlib
     #   nbconvert
     #   plotly
     #   pytest
@@ -255,6 +268,8 @@ patsy==1.0.1
     # via statsmodels
 pexpect==4.9.0
     # via ipython
+pillow==11.1.0
+    # via matplotlib
 pip-tools==7.4.1
     # via -r requirements/requirements-dev.in
 platformdirs==4.3.7
@@ -296,6 +311,8 @@ pygments==2.19.1
     #   ipython-pygments-lexers
     #   jupyter-console
     #   nbconvert
+pyparsing==3.2.3
+    # via matplotlib
 pyproject-hooks==1.2.0
     # via
     #   build
@@ -310,6 +327,7 @@ python-dateutil==2.9.0.post0
     # via
     #   arrow
     #   jupyter-client
+    #   matplotlib
     #   pandas
 python-json-logger==3.3.0
     # via jupyter-events
@@ -433,3 +451,4 @@ widgetsnbextension==4.0.13
     # via ipywidgets
 xgboost==3.0.0
     # via -r requirements/requirements.in
+    
